--- a/tut.html
+++ b/tut.html
@@ -6,8 +6,10 @@
   </head>
   <body>
     <h1>Im a big heading</h1>
-    <p>This is a paragraph element!</p>
+    <p>This is a <I>paragraph</i> element!</p>
     <a href="https://www.youtube.com/watch?v=hZNdN0PFLLo" target="_blank" title="Subscribe to my video">click here!</a>
+    <br>
+    <img src="img/asta.jpg" alt="Asta of Black Clover" width="500" height="500">
 
 
   </body>
