--- a/tut.html
+++ b/tut.html
@@ -9,7 +9,7 @@
       <p>This is a <I>paragraph</i> element!</p>
       <a href="https://www.youtube.com/watch?v=hZNdN0PFLLo" target="_blank" title="Subscribe to my video">click here!</a>
       <br>
-      <<p>My name is: <b>ASTA</b></p>
+      <p>My name is: <b>ASTA</b></p>
       <img src="img/asta.jpg" alt="Asta of Black Clover" width="500" height="500">
 
 
