--- a/tut_style.html
+++ b/tut_style.html
@@ -9,7 +9,7 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <h1>HEADING 1-1</h1>
+    <h1 style="font-size: 30px; color:aqua;">HEADING 1-1</h1>
     <h1>HEADING 1-2</h1>
     <h1>HEADING 1-3</h1>
 
