--- a/tut_style.html
+++ b/tut_style.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <h1 style="font-size: 30px; color:aqua;">HEADING 1-1</h1>
-    <h1>HEADING 1-2</h1>
-    <h1>HEADING 1-3</h1>
+    <h1 style="font-size: 30px; color:rgb(40, 230, 15);">HEADING 1-2</h1>
+    <h1 style="font-size: 30px; color:rgb(231, 73, 24);">HEADING 1-3</h1>
 
-    <H2>HEADING 2-1</H2>
-    <H2>HEADING 2-2</H2>
-    <H2>HEADING 2-3</H2>
+    <H2 style="font-size: 30px; color:blueviolet;">HEADING 2-1</H2>
+    <H2 style="font-size: 30px; color:rgb(99, 41, 60);">HEADING 2-2</H2>
+    <H2 style="font-size: 30px; color:aqua;">HEADING 2-3</H2>
 </body>
 </html>
