--- a/tut.html
+++ b/tut.html
@@ -11,6 +11,17 @@
       <!--  -->
       <div class="container">
 
+        <nav class="navbar navbar-dark bg-dark">
+          HOME
+        </nav>
+
+        <nav class="navbar navbar-dark bg-primary">
+          KNOW ME
+        </nav>
+
+        <nav class="navbar" style="background-color: #e3f2fd;">
+          CONTACT ME
+        </nav>
 
 
         <h1>Im a big heading</h1>
