--- a/tut.html
+++ b/tut.html
@@ -12,26 +12,29 @@
       <div class="container">
 
         <nav class="navbar navbar-dark bg-dark">
-          HOME
-        </nav>
+          <div class="container-fluid">
+              <a class="navbar-brand" href="#">Navbar w/ text</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">My Resume</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Contact Me</a>
+                  </li>
+                </ul>
+                <span class="navbar-text">
+                  Navbar text with an inline element
+                </span>
+              </div>
+        </div>
+      </nav>
+    </div>
 
-        <nav class="navbar navbar-dark bg-primary">
-          KNOW ME
-        </nav>
-
-        <nav class="navbar" style="background-color: #e3f2fd;">
-          CONTACT ME
-        </nav>
-
-
-        <h1>Im a big heading</h1>
-        <p>This is a <I>paragraph</i> element!</p>
-        <a href="https://www.youtube.com/watch?v=hZNdN0PFLLo" target="_blank" title="Subscribe to my video">click here!</a>
-        <br>
-        <p>My name is: <b>ASTA</b></p>
-        <img src="img/asta.jpg" alt="Asta of Black Clover" width="500" height="500">
-
-      </div>
-
-    </body>
 </html>
