--- a/tut.html
+++ b/tut.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title></title>
   </head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
     <body>
 
       <nav class="navbar navbar-expand-lg bg-light">
@@ -35,9 +37,11 @@
       <p>This is a <I>paragraph</i> element!</p>
       <a href="https://www.youtube.com/watch?v=hZNdN0PFLLo" target="_blank" title="Subscribe to my video">click here!</a>
       <br>
-      <<p>My name Asta</p>
+      <p>My name Asta</p>
       <img src="img/asta.jpg" alt="Asta of Black Clover" width="500" height="500">
 
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+        </body>
 
     </body>
 </html>
