--- a/tut.html
+++ b/tut.html
@@ -7,6 +7,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
     <body>
+  <div class="container">
+
+
 
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
@@ -41,7 +44,8 @@
       <img src="img/asta.jpg" alt="Asta of Black Clover" width="500" height="500">
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-        </body>
+  </div>
+  </body>
 
-    </body>
+
 </html>
