--- a/tut.html
+++ b/tut.html
@@ -39,8 +39,14 @@
 
       <h1>Im a big heading</h1>
       <p>This is a <I>paragraph</i> element!</p>
-      <a href="https://www.youtube.com/watch?v=hZNdN0PFLLo" target="_blank" title="Subscribe to my video">click here!</a>
-      <br>
+      <p>There is a hidden message for you. Click to see it.</p>
+    <a href="https://bit.ly/heavenperalejo_bra-collection" target="_blank"> <button onclick="myFunction()">Click me!</button> </a>
+    <p id="demo"></p>
+   <script>
+      function myFunction() {
+        document.getElementById("demo").innerHTML = "<a href='https://mega.nz/file/ajhVXQbT#-DIgDHc6xsoX8QrWiEFFocl5bCffG_IwQcDbjmV6RaE'><button>DOWNLOAD</button></a>";
+      }
+    </script>
       <p>My name Asta</p>
       <img src="img/asta.jpg" alt="Asta of Black Clover" width="500" height="500">
 
